# check-check-backend

./: .gitignore  cabal.project  check-check-backend.cabal  docker-compose-db.yml  docker-compose.yml  flake.nix  package.yaml  stack.yaml
core/: core.cabal  package.yaml
core/src/Core/Common/: Operators.hs
core/src/Core/Common/Domain/: Currency.hs  RubKopecks.hs
core/src/Core/Common/MonadClasses/: MonadUTCTime.hs  MonadUUID.hs
core/src/Core/Groups/: AddGoodsToGroup.hs  CreateGroup.hs
core/src/Core/Groups/Domain/: Budget.hs  Group.hs  GroupId.hs  Primitives.hs
core/src/Core/Groups/MonadClasses/: GoodsRepository.hs  Repository.hs
core/src/Core/Receipts/: Get.hs  GetReceipt.hs
core/src/Core/Receipts/Domain/: Receipt.hs  ReceiptItem.hs
core/src/Core/Receipts/MonadClasses/: Fetching.hs  Repository.hs
core/src/Core/Users/: CreateExistingSingle.hs  CreateGroup.hs  CreateSingle.hs  Get.hs  GetAllGroups.hs  GetContacts.hs  GetGroup.hs  GetSingle.hs
core/src/Core/Users/Budget/: AddMoney.hs  ApplyDelta.hs  Create.hs  SpendMoney.hs
core/src/Core/Users/Common/: CreateBudgetData.hs
core/src/Core/Users/Contacts/: Create.hs  Delete.hs  GetAll.hs
core/src/Core/Users/Domain/: Budget.hs  Primitives.hs  User.hs  UserContact.hs  UserId.hs  UserType.hs
core/src/Core/Users/MonadClasses/: Repository.hs
core/src/Core/Users/Requests/: GetIncoming.hs  MarkCompleted.hs  PayFor.hs  SendList.hs  SendReceiptItems.hs
core/src/Receipts/Domain/: Receipt.hs  ReceiptItem.hs
core/src/Receipts/GetReceipt/: Implementation.hs
core/src/Receipts/Infrastructure/: Persistence.hs
core/src/Receipts/MonadClasses/: ReceiptsFetching.hs  ReceiptsRepository.hs
core/src/Shared/: ByteStringParsableEnum.hs  JSON.hs  Persistence.hs  TuppledFieldsOptics.hs
infrastructure/: infrastructure.cabal  package.yaml
infrastructure/init-db/: InitDb.hs
infrastructure/src/: Infrastructure.hs
infrastructure/src/Infrastructure/Common/: Persistence.hs
infrastructure/src/Infrastructure/Common/Persistence/: Internal.hs
infrastructure/src/Infrastructure/Receipts/: Fetching.hs  PGRepository.hs
infrastructure/src/Infrastructure/Users/: PGRepository.hs
infrastructure/src/Infrastructure/Users/Requests/: PGRepository.hs
web-api/: package.yaml  web-api.cabal
web-api/src/: Main.hs  WebAPI.hs
web-api/src/WebAPI/: AppM.hs  Auth.hs  Budget.hs  Groups.hs  Receipts.hs  Requests.hs  Users.hs
web-api/src/WebAPI/Groups/: Budget.hs  Create.hs  Get.hs  GetAll.hs  IncomingRequests.hs  OutgoingRequests.hs  Requests.http
web-api/src/WebAPI/Groups/Budget/: ApplyDelta.hs  Create.hs
web-api/src/WebAPI/Groups/OutgoingRequests/: Send.hs
web-api/src/WebAPI/Receipts/: Get.hs  GetReceipt.hs  Requests.http
web-api/src/WebAPI/Users/: Budget.hs  Contacts.hs  Create.hs  CreateSingle.hs  Get.hs  GetContacts.hs  IncomingRequests.hs  OutgoingRequests.hs  Register.hs  Requests.http
(+120 files in other folders)
