cabal-version:  3.0
name:           core
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      Core.Common.Domain.RubKopecks
      Core.Common.MonadClasses.MonadUUID
      Core.Common.MonadClasses.MonadUTCTime
      Core.Common.Operators
  other-modules:
      Paths_core
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base
    , mtl
    , optics
    , smart-primitives
    , text
    , time
    , uuid
  default-language: GHC2021
