cabal-version:  3.0
name:           infrastructure
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      Infrastructure
      Infrastructure.Common.Persistence
  other-modules:
      Infrastructure.Common.Persistence.Internal.ByteStringParsableEnum
      Paths_infrastructure
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      aeson
    , base
    , bytestring
    , core
    , http-conduit
    , mtl
    , optics
    , postgresql-simple
    , smart-primitives
    , text
    , time
    , unordered-containers
    , uuid
  default-language: GHC2021

executable init-db
  main-is: InitDb.hs
  other-modules:
      Paths_infrastructure
  hs-source-dirs:
      init-db
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base
    , bytestring
    , infrastructure
    , mtl
    , postgresql-simple
    , text
  default-language: GHC2021
