cabal-version:  3.0
name:           web-api
version:        0.1.0.0
build-type:     Simple

executable web-api
  main-is: Main.hs
  other-modules:
      WebAPI
      WebAPI.AppM
      Paths_web_api
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      aeson
    , base
    , base64-bytestring
    , bytestring
    , check-check-backend-contracts
    , core
    , containers
    , http-conduit
    , infrastructure
    , mtl
    , postgresql-simple
    , resource-pool
    , servant-auth
    , servant-auth-server
    , servant-server
    , smart-primitives
    , text
    , time
    , uuid
    , wai
    , warp
  default-language: GHC2021
